<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageListActivity"
    android:background="@color/background_dark">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatOptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_dark" />
</LinearLayout>