<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:background="@color/background_dark">

    <TextView
        android:id="@+id/sent_message"
        android:text="hello, hello!"
        android:background="@drawable/rounded_rectangle_purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="240dp"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sent_time"
        android:text="12:69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_marginEnd="4dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/sent_message"
        app:layout_constraintRight_toLeftOf="@+id/sent_message" />

</androidx.constraintlayout.widget.ConstraintLayout>